--- a/styles.css
+++ b/styles.css
@@ -24,3 +24,8 @@ header.mycontent .mycontent-heading {
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }  
+
+.dropdown-menu > li > a:hover {
+    background-image: none;
+    background-color: grey;
+}
