--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ header.mycontent {
   padding-bottom: 13rem;
   text-align: center;
   color: #fff;
-  background-image: url("header-bg.jpg");
+  background-image: url("drawing-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
@@ -17,6 +17,7 @@ header.mycontent .mycontent-subheading {
   margin-bottom: 25px;
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
+
 header.mycontent .mycontent-heading {
   font-size: 3.25rem;
   font-weight: 700;
@@ -24,6 +25,17 @@ header.mycontent .mycontent-heading {
   margin-bottom: 2rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }  
+
+footer.content {
+   padding-top: 6rem;
+   padding-bottom: 5rem;
+   width: 100%;
+   background-color: black;
+   color: white;
+   text-align: center;
+   font-size: 1.25rem;
+   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
 
 .dropdown-menu > li > a:hover {
     background-image: none;
