--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ header.mycontent {
   padding-bottom: 13rem;
   text-align: center;
   color: #fff;
-  background-image: url("drawing-bg.jpg");
+  background-image: url("drawing-bg-2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
