--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,14 @@ header.mycontent .mycontent-subheading {
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+header.mycontent .mycontent-subheading-bold {
+  font-size: 1.75rem;
+  font-weight: bold;
+  line-height: 1.5rem;
+  margin-bottom: 25px;
+  font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
 header.mycontent .mycontent-heading {
   font-size: 3.25rem;
   font-weight: 700;
@@ -35,11 +43,6 @@ footer.content {
    text-align: center;
    font-size: 1.25rem;
    font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-}
-
-.dropdown-menu > li > a:hover {
-    background-image: none;
-    background-color: grey;
 }
 
 .anim1 {
@@ -70,10 +73,16 @@ footer.content {
   padding: 16px;
   font-size: 16px;
   border: none;
+  border-radius: 4px;
   cursor: pointer;
 }
 
-.dropbtn-round {border-radius: 4px;}
+.dropbtn-blue{
+	background-color: #007bff;
+	padding: 8px;
+	padding-right: 1em;
+	padding-left: 1em;
+}
 
 /* Dropdown button on hover & focus */
 .dropbtn:hover, .dropbtn:focus {
@@ -89,23 +98,28 @@ footer.content {
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f1f1f1;
+  /* position: absolute; Use this to change dropdown style */
+  background-color: #4cbbe0;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
+.dropdown-content .dropdown-item {
+	color: white;
+}
+
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd}
+.dropdown-content a:hover {background-color: #4082b8}
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
