--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,13 @@ footer.content {
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {display:block;}
 
+/* disable dragging and selecting elements */
+*, *::after, *::before {
+	-webkit-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-app-region: no-drag;
+	cursor: default;
+}
 
 /* Piano */
 
@@ -146,7 +153,7 @@ ul .white {
   background:linear-gradient(to bottom,#eee 0%,#fff 100%)
 }
 
-ul .white:active {
+ul .white.active {
   border-top:1px solid #777;
   border-left:1px solid #999;
   border-bottom:1px solid #999;
@@ -165,7 +172,7 @@ ul .white:active {
   background:linear-gradient(45deg,#222 0%,#555 100%)
 }
 
-.black:active {
+.black.active {
   box-shadow:-1px -1px 2px rgba(255,255,255,0.2) inset,0 -2px 2px 3px rgba(0,0,0,0.6) inset,0 1px 2px rgba(0,0,0,0.5);
   background:linear-gradient(to right,#444 0%,#222 100%)
 }
