--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,48 @@
-header.mycontent {
+/* Background Layer & Animation (Hue-Rotate) */
+header.bg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
   padding-top: 10.5rem;
-  padding-bottom: 13rem;
-  text-align: center;
-  color: #fff;
+  padding-bottom: 60rem;
+  display: block;
   background-image: url("drawing-bg-2.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
   background-size: cover;
+}
+
+.scrollable-menu {
+    height: auto;
+    max-height: 200px;
+    overflow-x: hidden;
+}
+
+header.bg.animated {
+  -webkit-animation: filter-animation 72s infinite;
+  animation: filter-animation 72s infinite;
+}
+
+@-webkit-keyframes filter-animation {
+  0% { -webkit-filter: hue-rotate(0deg); }
+  50% { -webkit-filter: hue-rotate(360deg); }
+  100% { -webkit-filter: hue-rotate(0deg); }
+}
+
+@keyframes filter-animation {
+  0% { filter: hue-rotate(0deg); }
+  50% { filter: hue-rotate(360deg); }
+  100% { filter: hue-rotate(0deg); }
+}
+
+/* Content */
+header.mycontent {
+  padding-top: 10.5rem;
+  padding-bottom: 13rem;
+  text-align: center;
+  color: #fff;
 }
 
 header.mycontent .mycontent-subheading {
@@ -34,6 +69,8 @@ header.mycontent .mycontent-heading {
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }  
 
+
+/* Footer */
 footer.content {
    padding-top: 6rem;
    padding-bottom: 5rem;
@@ -45,6 +82,7 @@ footer.content {
    font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+/* Text Animation */
 .anim1 {
   position: relative;
   font-weight: 900;
@@ -98,11 +136,13 @@ footer.content {
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
   display: none;
-  /* position: absolute; Use this to change dropdown style */
+  position: relative; /* Use this to change dropdown style */
   background-color: #4cbbe0;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  max-height: 250px;
+  overflow: auto; /* scrollbar */
 }
 
 .dropdown-content .dropdown-item {
