Use GET & POST to database instead of sample file

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ header.bg {
   padding-top: 10.5rem;
   padding-bottom: 60rem;
   display: block;
-  background-image: url("drawing-bg-2.jpg");
+  background-image: url("drawing-bg.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
