--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,7 @@ header.mycontent .mycontent-subheading-bold {
   font-weight: bold;
   line-height: 1.5rem;
   margin-bottom: 25px;
+  text-shadow: 2px 2px rgba(0,0,0,0.8);
   font-family: "Droid Serif", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
