--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/* Background Layer & Animation (Hue-Rotate) */
+/* Background Layer & Animation */
 header.bg-back {
   position: fixed;
   left: 0;
